overflow correction on about us

--- a/studyPadi-main/css/aboutUs.css
+++ b/studyPadi-main/css/aboutUs.css
@@ -3,7 +3,7 @@
 
 body {
     height: 100vh;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 /* About-Us */
